--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,9 +62,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.wdullaer:materialdatetimepicker:3.6.4'
 
-    implementation 'com.google.firebase:firebase-core:17.4.3'
-    implementation 'com.google.firebase:firebase-messaging:20.2.1'
+    implementation 'com.google.firebase:firebase-core:17.4.4'
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
 
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
 
 }
+apply plugin: 'com.google.gms.google-services'
